--- a/disneyplus/entrardisneyplus.html
+++ b/disneyplus/entrardisneyplus.html
@@ -12,15 +12,7 @@
         <div style="flex: 1; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center;">
             <img class="logo" src="https://cnbl-cdn.bamgrid.com/assets/7ecc8bcb60ad77193058d63e321bd21cbac2fc67281dbd9927676ea4a4c83594/original" alt="Disney Plus">
             <h1>Use o seu email para entrar</h1>
-            <!-- <form class="text-box" action="/url" method="GET">
-                <input type="text" placeholder="E-mail">
-            </form> -->
-            <span style="position: relative; display: block">
-                <!-- <input type="text"> -->
-                <input aria-label="E-mail" display="inline" id="email" maxlength name="email" placeholder="E-mail" type="email" 
-                data-gv2elementkey="email" data-gv2interactionkey="email" class="sc-jAaTju fmqfIm sc-eqIVtm csbJFj text-color--primary body-copy form-input-text" 
-                value>
-            </span>
+            <input type="email" style="width: 100%; padding: 10px; border-radius: 10px;" placeholder="Insira seu email">
         </div>
         <div style="flex: 1; height: 100%; display: flex; justify-content: flex-end">
             <p class="button1">continuar</p>
